objects/Clienteling_App_Setting__mdt.object
<CustomObject>
    <label>CLT App Setting</label>
    <pluralLabel>CLT App Settings</pluralLabel>
    <fields>
        <fullName>Profile_SA__c</fullName>
        <label>Profile SA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_SM__c</fullName>
        <label>Profile SM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_LogActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Log Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immediate_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Admin__c</fullName>
        <label>Profile Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogHistoryDays__c</fullName>
        <label>Log History Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Site_URL__c</fullName>
        <label>Public Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Thank_You_List_Id__c</fullName>
        <label>Thank You List Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Satisfaction_List_Id__c</fullName>
        <label>Client Satisfaction List Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>